--- a/project.html
+++ b/project.html
@@ -37,20 +37,20 @@
                 <tr>
                     <th>State</th>
                     <th>Abbreviation</th>
-                    <th>People Fully Vaccinated Per Hundred (5th Jan 2022)</th>
-                    <th>Unemployment Rate (annual Average 2021)</th>
+                    <th>Fully Vaccinated/100 (Jan 2022)</th>
+                    <th>Unemployment Rate (2021)</th>
                     <th>Per Capita Income (2021 FRED)<a href="https://fred.stlouisfed.org/release/tables?rid=110&amp;eid=257197&amp;od=#" class="source">(source)</a></th>
                     <th>% Lean Republican <a href="https://www.pewresearch.org/religion/religious-landscape-study/compare/party-affiliation/by/state/" class="source">(source)</a></th>
                     <th>% Democrat Lean</th>
-                    <th>WhiteTotalPerc <a href="https://worldpopulationreview.com/states/states-by-race">(source)</a></th>
-                    <th>BlackTotalPerc</th>
-                    <th>IndianTotalPerc</th>
-                    <th>AsianTotalPerc</th>
-                    <th>HawaiianTotalPerc</th>
-                    <th>OtherTotalPerc</th>
-                    <th>No n White</th>
-                    <th>NON WHITE PER HUNDRED</th>
-                    <th>Children 0-18 (https://www.kff.org/other/state-indicator/population-distribution-by-age-cps)</th>
+                    <th>White % <a href="https://worldpopulationreview.com/states/states-by-race" class="source">(source)</a></th>
+                    <th>Black %</th>
+                    <th>Indian %</th>
+                    <th>Asian %</th>
+                    <th>Hawaiian %</th>
+                    <th>Other %</th>
+                    <th>Non White</th>
+                    <th>Non White/100</th>
+                    <th>Children 0-18 <a href="https://www.kff.org/other/state-indicator/population-distribution-by-age-cps" class="source">(source)</a></th>
                     <th>Adults 19-25</th>
                     <th>Adults 26-34</th>
                     <th>Adults 35-54</th>
@@ -64,8 +64,8 @@
                     <th>Medicare</th>
                     <th>Uninsured</th>
                     <th>NOTINSURED </th>
-                    <th>PercentHighSchoolOrHigher</th>
-                    <th>PercentBachelorsOrHigher</th>
+                    <th>HighSchool Or Higher %</th>
+                    <th>Bachelors Or Higher %</th>
                 </tr>
                 </thead>
                 <tbody>
