--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,6 @@
 <html lang="en-us">
 <link href="styles.css" rel="stylesheet" />
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/dark.min.css">
 <body>
 <nav>
 	<div class="site-title">
