fix colors for young map

--- a/project.html
+++ b/project.html
@@ -1736,9 +1736,7 @@
                         "encoding": {
                             "color": {
                                 "field": "RATE",
-                                "type": "quantitative",
-                                "domainMax": 0.5,
-                                "domainMin": 0.3
+                                "type": "quantitative"
                             }
                         }
                     }
@@ -1774,7 +1772,7 @@
                                     "type": "quantitative",
                                     "scale": {
                                         "domainMax": 0.55,
-                                        "domainMin": 0.3
+                                        "domainMin": 0.32
                                     }
                                 }
                             }
