--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
 		<a href="./">Home</a>
 		<a href="./project.html">Project</a>
 		<a href="./portfolio.html">Portfolio</a>
-		<a href="./">Explore Github</a>
+		<a href="https://github.com/YigeWang0312/data-science">Explore Github</a>
 	</div>
 </nav>
 <main>
