--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ width:500px;}</style>
 		<a href="./">Home</a>
 		<a href="./project.html">Project</a>
 		<a href="./portfolio.html">Portfolio</a>
-		<a href="./">Explore Github</a>
+		<a href="https://github.com/YigeWang0312/data-science">Explore Github</a>
 	</div>
 </nav>
 <main>
