--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ width:500px;}</style>
 <nav>
 	<div class="site-title">
 		<h3>Data Science</h3>
-		<p>by Yige Wang</p>
+		<p>by Yige Wang | 1870312</p>
 	</div>
 	<div class="nav-menu">
 		<a href="./">Home</a>
