--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
 <nav>
 	<div class="site-title">
 		<h3>Data Science</h3>
-		<p>by Yige Wang</p>
+		<p>by Yige Wang | 1870312</p>
 	</div>
 	<div class="nav-menu">
 		<a href="./">Home</a>
