--- a/portfolio.html
+++ b/portfolio.html
@@ -164,19 +164,15 @@
             </div>
         </div>
     </li>
-    <li>
+    <li class="half">
         <h2>Loops and APIs</h2>
-        <p>Download code from an API using fetch in Python/Colab and chart this. Use a loop to
-            batch download data.</p>
-        <div>
-            <p>This website is hosted via github pages: https://yigewang0312.github.io/data-science/portfolio.html</p>
-        </div>
+        <a href="https://colab.research.google.com/drive/1sWLNa1dzivX0HeaxJY4HqkW5XD9xEgNr#scrollTo=eJFbKDoqkBhH">Colab Scraper</a>
     </li>
-    <li>
+    <li class="half">
         <h2>Loops and scrapers</h2>
         <p>Build a scraper in Colab, save and chart the results.</p>
         <div>
-
+            <img src="images/pie-chart-from-colab.png" width="500px" />
         </div>
     </li>
     <li>
