--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 <h1>Portfolio</h1>
 <ol class="portfolio">
     <li>
-        <h2>Building a site</h2>
+        <h2>Week1: Building a site</h2>
         <p>Build your multi-page site. Host it on GitHub, with at least two pages: index (your
             portfolio) and project. Feel free to add more pages (about etc) and make your index and into page. If
             you do this make a clear portfolio page – this is what we will mark.</p>
@@ -27,7 +27,7 @@
         </div>
     </li>
     <li>
-        <h2>Embedding</h2>
+        <h2>Week2: Embedding</h2>
         <p>Embed three charts, two that are given to you in class. One (as homework) taken from the
             repository of charts that drive www.rapidcharts.io</p>
         <div>
@@ -37,7 +37,7 @@
         </div>
     </li>
     <li>
-        <h2>Hosting data</h2>
+        <h2>Week3: Hosting data</h2>
         <p>Embed two charts of your own design: (a) from a given API, (b) from the same/related
             data saved to your GitHub.</p>
         <div>
@@ -67,7 +67,7 @@
         </div>
     </li>
     <li>
-        <h2>Editing data, writing JSON by hand</h2>
+        <h2>Week4: Editing data, writing JSON by hand</h2>
         <p>Two more charts. One where you change the data (add an
             observation, add a series, create a new series); One where the data is “in-line” JSON that you write. This
             second chart need only have 5 or so observations.</p>
@@ -114,7 +114,7 @@
         </div>
     </li>
     <li>
-        <h2>API driven charts</h2>
+        <h2>Week5: API driven charts</h2>
         <p>Embed two charts of your own design from two separate APIs that you sign up for &
             gain access to.</p>
         <div>
@@ -165,18 +165,18 @@
         </div>
     </li>
     <li class="half">
-        <h2>Loops and APIs</h2>
+        <h2>Week6: Loops and APIs</h2>
         <a href="https://colab.research.google.com/drive/1sWLNa1dzivX0HeaxJY4HqkW5XD9xEgNr#scrollTo=eJFbKDoqkBhH">Colab Scraper</a>
     </li>
     <li class="half">
-        <h2>Loops and scrapers</h2>
+        <h2>Week7: Loops and scrapers</h2>
         <p>Build a scraper in Colab, save and chart the results.</p>
         <div>
             <img src="images/pie-chart-from-colab.png" width="500px" />
         </div>
     </li>
     <li>
-        <h2>Merging data</h2>
+        <h2>Week8: Merging data</h2>
         <p>Build a chart with data from two separate sources. Plot these data using correlation,
             regression or some other technique.</p>
         <div>
@@ -265,7 +265,7 @@
         </div>
     </li>
     <li>
-        <h2>Advanced analytics</h2>
+        <h2>Week9: Advanced analytics</h2>
         <p>Build and embed a chart that uses advanced statistical methods, testing causality
             or distribution</p>
         <div>
@@ -273,7 +273,7 @@
         </div>
     </li>
     <li>
-        <h2>Interactivity.</h2>
+        <h2>Week10: Interactivity.</h2>
         <p>Build and embed two interactive charts.</p>
         <div>
         </div>
