--- a/project.html
+++ b/project.html
@@ -17,7 +17,10 @@
 	</div>
 </nav>
 <main>
-<h1>Case Study/Project</h1>
+<h1>
+    Suggested title: “Vaccination: different states and different rates”
+    (Alternatively, for a less poetic and more factual title, can do anything similar to “Interstate variation in COVID-19 vaccination coverage”)
+</h1>
 <ol class="project">
     <li>
         <h2>Introduction</h2>
