--- a/project.html
+++ b/project.html
@@ -25,11 +25,7 @@
     <li>
         <h2>Introduction</h2>
         <p>
-            Although the USA's vaccination programme has been urgent and comprehensive, by the end of 2021,
-        there were significant regional differences in the population's coverage of the COVID-19 vaccine.
-        Using ordinary least squares and fixed-effects modelling, this research finds several socio-economic
-        variables that contribute to heterogeneity in state-level vaccination coverage and offers
-        recommendations for improving vaccination rates in light of the findings.
+            Despite the USA's vaccination programme urgency, there were significant regional differences in the population's coverage of the COVID-19 vaccine by the end of 2021. Using ordinary least squares and fixed-effects modelling, this research finds several socio-economic variables that contribute to variation in state-level vaccination coverage.
         </p>
     </li>
     <li>
