--- a/project.html
+++ b/project.html
@@ -989,56 +989,65 @@
             Before modelling, variables with insufficiently low (|r|< 0.5) Pearson product correlation coefficients when connected with other variables were removed. Models with low multicollinearity and variation inflation factors were chosen (VIF); unemployment rate, health insurance, and several racial groupings were disregarded as potential explanatory factors. We used Ordinary Least Squares regressions, with state-level fixed effects version for robustness. Different models are summarised in Table 2 below:
         </p>
         <table>
+            <thead>
+            <tr>
+                <th>Model</th>
+                <th>Equation</th>
+                <th>Description</th>
+            </tr>
+            </thead>
+            <tbody>
             <tr>
                 <td>1 (OLS)</td>
                 <td>Vi = β0 + β1inci + β2demi + β3blacki + β4agei + εi</td>
-                <td>Regresses % state population fully vaccinated on: state-average income per capita (inc),  % state population who strongly support Democrat (dem), proportion of state population who are Black (black), proportion of state population aged 34 and under (age)</td>
+                <td>Regresses % state population fully vaccinated on:state-average income per capita (inc), % state population who strongly support Democrat (dem),proportion of state population who are Black (black),proportion of state population aged 34 and under (age)</td>
             </tr>
             <tr>
                 <td>2 (FE)</td>
-                <td>Vi = β0 + β1inci + β2demi + β3blacki + β4agei + βstatestatei + εi</td>
-                <td>Same regression as model (1) but now including a vector of dummy variables for US states (state). β_state is a vector of coefficients</td>
+                <td>Vi = β0 + β1inci + β2demi + β3blacki + β4agei+ βstatestatei + εi</td>
+                <td>Same regression as model (1) but now including a vector ofdummy variables for US states (state). β_state is a vector ofcoefficients</td>
             </tr>
             <tr>
                 <td>3 (OLS)</td>
-                <td>Vi = β0 + β1inci + β2demi + β3blacki + β4agei + β5inci2 + β6demi2 + β7blacki2 + β8agei2 + εi</td>
+                <td>Vi = β0 + β1inci + β2demi + β3blacki + β4agei+ β5inci2 + β6demi2 + β7blacki2 + β8agei2 + εi</td>
                 <td>An extention of model (1), includes squares of  all explanatory variables (inc^2, dem^2, black^2, age^2)</td>
             </tr>
             <tr>
                 <td>4 (FE)</td>
-                <td>Vi = β0 + β1inci + β2demi + β3blacki + β4agei + β5inci2 + β6demi2 + β7blacki2 + β8agei2 + βstatestatei + εi</td>
+                <td>Vi = β0 + β1inci + β2demi + β3blacki + β4agei+ β5inci2 + β6demi2 + β7blacki2 + β8agei2 + βstatestatei + εi</td>
                 <td>Same regression as model (3) but now including a vector of dummy variables for US states (state). β_state is a vector of coefficients</td>
             </tr>
             <tr>
                 <td>5 (OLS)</td>
-                <td>Vi = β0 + β1inci + β2demi + β3blacki + β4agesegi + εi</td>
-                <td>An adjustment to model (1) by segmenting the age category.  Regresses % state population fully vaccinated on: state-level income per capita (inc), % state population who strongly support Democrat (dem), proportion of state population who are black (black), proportion of state population aged 19-34 (ageseg)</td>
+                <td>Vi = β0 + β1inci + β2demi + β3blacki+ β4agesegi + εi</td>
+                <td>An adjustment to model (1) by segmenting the age category. Regresses % state population fully vaccinated on:state-level income per capita (inc),% state population who strongly support Democrat (dem),proportion of state population who are black (black),proportion of state population aged 19-34 (ageseg)</td>
             </tr>
             <tr>
                 <td>6 (FE)</td>
-                <td>Vi = β0 + β1inci + β2demi + β3blacki + β4agesegi + βstatestatei + εi</td>
+                <td>Vi = β0 + β1inci + β2demi + β3blacki+ β4agesegi + βstatestatei + εi</td>
                 <td>Same regression as model (5) but now includes a vector of dummy variables for US states (state). β_state is a vector of coefficients</td>
             </tr>
             <tr>
                 <td>7 (OLS)</td>
-                <td>Vi = β0 + β1demi + β2blacki + β3agesegi + β4educi + εi</td>
+                <td>Vi = β0 + β1demi + β2blacki + β3agesegi+ β4educi + εi</td>
                 <td>Regress % state population fully vaccinated on: % state population who strongly support Democrat (dem), proportion of state population who are black (black), proportion of state population aged 19-34 (ageseg), % state who have achieved Bachelor's degree or higher (educ)</td>
             </tr>
             <tr>
                 <td>8 (FE)</td>
-                <td>Vi = β0 + β1demi + β2blacki + β3agesegi + β4educi + βstatestatei + εi</td>
+                <td>Vi = β0 + β1demi + β2blacki + β3agesegi + β4educi+ βstatestatei + εi</td>
                 <td>Same regression as model (7) but now including a vector of dummy variables for US states (state). β_state is a vector of coefficients</td>
             </tr>
             <tr>
                 <td>9 (OLS)</td>
-                <td>Vi = β0 + β1repubi + β2blacki + β3agesegi + β4educi + εi</td>
-                <td>Same regression as model (7), but the dem variable has been replaced by repub (proportion of state population who strongly support Republican)</td>
+                <td>Vi = β0 + β1repubi + β2blacki + β3agesegi+ β4educi + εi</td>
+                <td>Same regression as model (7), but the dem variable has beenreplaced by repub (proportion of state population who stronglysupport Republican)</td>
             </tr>
             <tr>
                 <td>10 (FE)</td>
-                <td>Vi = β0 + β1repubi + β2blacki + β3agesegi + β4educi + βstatestatei + εi</td>
+                <td>Vi = β0 + β1repubi + β2blacki + β3agesegi + β4educi+ βstatestatei + εi</td>
                 <td>Same regression as model (9) but now including a vector of dummy variables for US states (state). β_state is a vector of coefficients</td>
             </tr>
+            </tbody>
         </table>
     </li>
     <li>
