--- a/project.html
+++ b/project.html
@@ -1052,39 +1052,23 @@
     </li>
     <li>
         <h2>Model Results</h2>
-        <p>
-            Estimates of the coefficients for the explanatory variables of the models are shown in Table 4. If all other variables are held constant, a coefficient should be understood as an evaluation of the marginal effect that its explanatory variable has on the state vaccination rate. All models have relatively high R-squared values (> 0.78), which indicates that most of the variation in COVID-19 vaccination coverage across different states can be attributed to factors such as income per capita, political alignment, the percentage of the population that is black, age, and education.
-        </p>
-        <p>
-            In all three of its baseline OLS regressions (models 1, 3, and 5), the coefficient on per capita income is found to be significant and positive, indicating that an increase of $1 in per capita income (controlling for all other variables) should correspond to an expected increase in state vaccination coverage of anywhere between 0.0003% and 0.0018% on average, depending on which model we examine. The coefficient on income per capita in the FE models shifts from significant to negative in model 2, indicating that the fixed effects are mostly responsible for the variance in vaccination coverage and that the income per capita effects are weaker than first believed.
-        </p>
-        <p>
-            All OLS models, along with most of the FE models, show positive and substantial coefficients for a state's Democratic alignment. The predicted increase in state vaccination coverage by 1% should be between 0.6% and 2.4% on average, depending on how strongly the Democratic Party is represented in the state's population. Similarly, when model 7 and model 9 are compared, the Republican alignment coefficient is shown to be substantial, negative, and numerically close to the Democratic alignment coefficient. According to model 9, a 1% rise in the number of strongly Republican state residents should cause the state's vaccination coverage to drop by an average of 0.56%.
-        </p>
-        <p>
-            In all OLS models, the coefficient on the Black population is negative and substantial. Therefore, a 1% increase in a state's share of black people should result in a projected fall in the state's vaccination coverage of between 0.24% and 0.37%. In FE models, it is less significant and occasionally even positive, indicating that the state level fixed effects are mostly responsible for the fluctuation.
-        </p>
-        <p>
-            In its OLS models, the age coefficient for the larger 0 to 34 age range is substantial and negative. In contrast, the coefficient for the narrower age variable of 19 to 34 is also negative and significant within its OLS models, meaning that an expected decrease in state vaccination coverage of between 1.25% and 1.71% should result from a 1% increase in the proportion of the population in a state aged between 19 and 34. Although both variables' coefficients are still negative in all except 2 and 8 FE models, they are not significant.
-        </p>
-        <p>
-            Finally, a 1% rise in the percentage of a state's population with a bachelor's degree or more should result in an average increase in state vaccination coverage of between 0.67% and 0.79%, according to OLS models and FE model 8 where the coefficient on education is positive and substantial.
-            Most of these state-level findings concur with individual-level findings from the highlighted logistic models in Section 2.
-        </p>
         <table>
+            <thead>
             <tr>
-                <td>VARIABLES</td>
-                <td>(1)</td>
-                <td>(2)</td>
-                <td>(3)</td>
-                <td>(4)</td>
-                <td>(5)</td>
-                <td>(6)</td>
-                <td>(7)</td>
-                <td>(8)</td>
-                <td>(9)</td>
-                <td>(10)</td>
+                <th>VARIABLES</th>
+                <th>-1</th>
+                <th>-2</th>
+                <th>-3</th>
+                <th>-4</th>
+                <th>-5</th>
+                <th>-6</th>
+                <th>-7</th>
+                <th>-8</th>
+                <th>-9</th>
+                <th>-10</th>
             </tr>
+            </thead>
+            <tbody>
             <tr>
                 <td>Income</td>
                 <td>0.000339*** </td>
@@ -1100,12 +1084,12 @@
             </tr>
             <tr>
                 <td></td>
-                <td>(0.0000961)</td>
-                <td>(0.0006483)</td>
-                <td>(0.0006374)</td>
-                <td>(0.0014637)</td>
-                <td>(0.0000894)</td>
-                <td>(0.0000792)</td>
+                <td>-9.61E-05</td>
+                <td>-0.0006483</td>
+                <td>-0.0006374</td>
+                <td>-0.0014637</td>
+                <td>-8.94E-05</td>
+                <td>-7.92E-05</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -1116,7 +1100,7 @@
                 <td>-</td>
                 <td>-</td>
                 <td> -1.09e-08*</td>
-                <td>-3.21e-08</td>
+                <td>-3.21E-08</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
@@ -1128,8 +1112,8 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td>(4.84e-09)</td>
-                <td>(9.26e-09)</td>
+                <td>-4.84E-09</td>
+                <td>-9.26E-09</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -1152,14 +1136,14 @@
             </tr>
             <tr>
                 <td></td>
-                <td>(0.1297388)</td>
-                <td>(0.5788273 )</td>
-                <td>(0.310921)</td>
-                <td>(1.266614)</td>
-                <td>(0.1015969)</td>
-                <td>(0.0224952)</td>
-                <td>(0.0895951)</td>
-                <td>(0.065091)</td>
+                <td>-0.1297388</td>
+                <td>-0.5788273</td>
+                <td>-0.310921</td>
+                <td>-1.266614</td>
+                <td>-0.1015969</td>
+                <td>-0.0224952</td>
+                <td>-0.0895951</td>
+                <td>-0.065091</td>
                 <td></td>
                 <td></td>
             </tr>
@@ -1180,8 +1164,8 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td>(0.0036477)</td>
-                <td>(0.0183228)</td>
+                <td>-0.0036477</td>
+                <td>-0.0183228</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -1212,8 +1196,8 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td>(0.0990377)</td>
-                <td>(0.110767)</td>
+                <td>-0.0990377</td>
+                <td>-0.110767</td>
             </tr>
             <tr>
                 <td>Black</td>
@@ -1230,23 +1214,23 @@
             </tr>
             <tr>
                 <td></td>
-                <td>(6.800775)</td>
-                <td>(54.93911)</td>
-                <td>(15.64079)</td>
-                <td>(67.24619)</td>
-                <td>(5.818826)</td>
-                <td>(1.570517)</td>
-                <td>(4.566139)</td>
-                <td>(5.053949)</td>
-                <td>(4.356314)</td>
-                <td>(12.19962)</td>
+                <td>-6.800775</td>
+                <td>-54.93911</td>
+                <td>-15.64079</td>
+                <td>-67.24619</td>
+                <td>-5.818826</td>
+                <td>-1.570517</td>
+                <td>-4.566139</td>
+                <td>-5.053949</td>
+                <td>-4.356314</td>
+                <td>-12.19962</td>
             </tr>
             <tr>
                 <td>Black^2</td>
                 <td>-</td>
                 <td>-</td>
                 <td>60.9079</td>
-                <td>-22.66758 </td>
+                <td>-22.66758</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
@@ -1258,8 +1242,8 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td>(38.34182)</td>
-                <td>(236.0603)</td>
+                <td>-38.34182</td>
+                <td>-236.0603</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -1272,7 +1256,7 @@
                 <td>-69.3686*</td>
                 <td>487.0256</td>
                 <td>-1316.784***</td>
-                <td>-2434.529 </td>
+                <td>-2434.529</td>
                 <td>-</td>
                 <td>-</td>
                 <td>-</td>
@@ -1282,10 +1266,10 @@
             </tr>
             <tr>
                 <td></td>
-                <td> (38.59497)</td>
-                <td>(370.8751)</td>
-                <td>(295.4562)</td>
-                <td>(1355.262)</td>
+                <td>-38.59497</td>
+                <td>-370.8751</td>
+                <td>-295.4562</td>
+                <td>-1355.262</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -1310,8 +1294,8 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td>(326.277)</td>
-                <td>(1404.359)</td>
+                <td>-326.277</td>
+                <td>-1404.359</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -1338,12 +1322,12 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td>(37.83541)</td>
-                <td>(39.55346)</td>
-                <td>(35.47495)</td>
-                <td>(38.94885)</td>
-                <td>(34.62379)</td>
-                <td>(50.22007)</td>
+                <td>-37.83541</td>
+                <td>-39.55346</td>
+                <td>-35.47495</td>
+                <td>-38.94885</td>
+                <td>-34.62379</td>
+                <td>-50.22007</td>
             </tr>
             <tr>
                 <td>Education</td>
@@ -1366,15 +1350,15 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td>(0.1259004)</td>
-                <td>(0.1141864)</td>
-                <td>(0.136419)</td>
-                <td>(0.2219998)</td>
+                <td>-0.1259004</td>
+                <td>-0.1141864</td>
+                <td>-0.136419</td>
+                <td>-0.2219998</td>
             </tr>
             <tr>
                 <td>Constant</td>
                 <td> 50.29934**</td>
-                <td> -156.4554 </td>
+                <td>-156.4554</td>
                 <td>238.3277***</td>
                 <td>403.6915</td>
                 <td>37.65037*** </td>
@@ -1386,16 +1370,16 @@
             </tr>
             <tr>
                 <td></td>
-                <td>(18.06561)</td>
-                <td>(144.1061)</td>
-                <td>(64.9411)</td>
-                <td>(263.7733)</td>
-                <td>(6.219555)</td>
-                <td>(5.444274)</td>
-                <td>(6.798758)</td>
-                <td>(7.993108)</td>
-                <td>(8.793302)</td>
-                <td>(11.55951)</td>
+                <td>-18.06561</td>
+                <td>-144.1061</td>
+                <td>-64.9411</td>
+                <td>-263.7733</td>
+                <td>-6.219555</td>
+                <td>-5.444274</td>
+                <td>-6.798758</td>
+                <td>-7.993108</td>
+                <td>-8.793302</td>
+                <td>-11.55951</td>
             </tr>
             <tr>
                 <td>R-squared</td>
@@ -1404,9 +1388,9 @@
                 <td>0.8895</td>
                 <td>0.9998</td>
                 <td>0.8012</td>
-                <td>1.0000</td>
+                <td>1</td>
                 <td>0.8578</td>
-                <td>1.0000</td>
+                <td>1</td>
                 <td>0.8388</td>
                 <td>0.9997</td>
             </tr>
@@ -1449,14 +1433,7 @@
                 <td>1.78</td>
                 <td>5.17</td>
             </tr>
-            <tfoot>
-                <tr>
-                    <td colspan="99">
-                        <p>Robust standard errors in parentheses</p>
-                        <p>*** p < 0.01, ** p<0.05, * p<0.1</p>
-                    </td>
-                </tr>
-            </tfoot>
+            </tbody>
         </table>
     </li>
     <li>
