--- a/project.html
+++ b/project.html
@@ -1435,6 +1435,17 @@
             </tr>
             </tbody>
         </table>
+        <h3>IMPORTANT TABLE FOOTNOTE:</h3>
+
+        <p>(Robust standard errors in parentheses, *** p < 0.01, ** p<0.05, * p<0.1)</p>
+
+        <h4>Results</h4>
+
+        <p>Estimates of the coefficients for the explanatory variables of the models are shown in Table 3. A coefficient should be understood as the marginal effect that its explanatory variable has on the state vaccination rate, if all other variables are held constant. All models have relatively high R-squared values (> 0.78), which indicates that most of the variation in COVID-19 vaccination coverage across different states can be attributed to factors such as income per capita, political alignment, the percentage of the population that is black, age, and education.</p>
+
+        <p><strong>1. Income Per Capita</strong></p>
+
+        <p>In models 1, 3, and 5 the significant positive coefficient on per capita income implies an increase of $1 should correspond to an expected increase in state vaccination coverage between 0.0003% and 0.0018%. The coefficient on income per capita in the FE models is negative in model 2, indicating that the fixed effects are mostly responsible for the variance in vaccination coverage and that the income per capita effects are weaker than first believed.</p>
     </li>
     <li>
         <h2>Policy Guidance (based on the OLS results)</h2>
