compress table markups for readability

--- a/portfolio.html
+++ b/portfolio.html
@@ -192,29 +192,20 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Blenhelm Palace</td>
-                            <td>...</td>
-                            <td>...</td>
+                            <td>Blenhelm Palace</td><td>...</td><td>...</td>
                         </tr>
                         <tr>
-                            <td>Canterbury Cathedral</td>
-                            <td>...</td>
-                            <td>...</td>
+                            <td>Canterbury Cathedral</td><td>...</td><td>...</td>
                         </tr>
                         <tr>
-                            <td>Windsor Castle</td>
-                            <td>...</td>
-                            <td>...</td>
+                            <td>Windsor Castle</td><td>...</td><td>...</td>
                         </tr>
                         <tr>
-                            <td>Stonehedge</td>
-                            <td>...</td>
-                            <td>...</td>
+                            <td>Stonehedge</td><td>...</td><td>...</td>
                         </tr>
                         <tr>
                             <td>Peak District National Park</td>
-                            <td>...</td>
-                            <td>...</td>
+                            <td>...</td><td>...</td>
                         </tr>
                     </tbody>
                 </table>
