--- a/project.html
+++ b/project.html
@@ -322,24 +322,6 @@
             </div>
         </div>
     </li>
-    <li class="figures">
-        <figure>
-            <img src="Democrat-Lean.png" alt="democrat lean vs fully vaccinated graph" />
-            <figcaption>Democrat Lean vs Vaccination</figcaption>
-        </figure>
-        <figure>
-            <img src="Republican-Lean.png" alt="republican lean vs fully vaccinated graph" />
-            <figcaption>Republican Lean vs Vaccination</figcaption>
-        </figure>
-        <figure>
-            <img src="Young.png" alt="age vs fully vaccinated graph" />
-            <figcaption>Age vs Vaccination</figcaption>
-        </figure>
-        <figure>
-            <img src="PercentBachelorsOrHigher.png" alt="education vs fully vaccinated graph" />
-            <figcaption>Education vs Vaccination</figcaption>
-        </figure>
-    </li>
     <li>
         <h2>Data Quality Commentary</h2>
         <p>
@@ -516,9 +498,54 @@
 
         <p>Estimates of the coefficients for the explanatory variables of the models are shown in Table 3. A coefficient should be understood as the marginal effect that its explanatory variable has on the state vaccination rate, if all other variables are held constant. All models have relatively high R-squared values (> 0.78), which indicates that most of the variation in COVID-19 vaccination coverage across different states can be attributed to factors such as income per capita, political alignment, the percentage of the population that is black, age, and education.</p>
 
-        <p><strong>1. Income Per Capita</strong></p>
+        <ol>
+            <li><strong>Income Per Capita</strong>
+                <p>In models 1, 3, and 5 the significant positive coefficient on per capita income implies an increase of $1 should correspond to an expected increase in state vaccination coverage between 0.0003% and 0.0018%. The coefficient on income per capita in the FE models is negative in model 2, indicating that the fixed effects are mostly responsible for the variance in vaccination coverage and that the income per capita effects are weaker than first believed.</p>
 
-        <p>In models 1, 3, and 5 the significant positive coefficient on per capita income implies an increase of $1 should correspond to an expected increase in state vaccination coverage between 0.0003% and 0.0018%. The coefficient on income per capita in the FE models is negative in model 2, indicating that the fixed effects are mostly responsible for the variance in vaccination coverage and that the income per capita effects are weaker than first believed.</p>
+                <figure>
+                    <figcaption>
+                        Graph 1: Per Capita Income and Vaccination Coverage
+                    </figcaption>
+                    <img src="images/scatter-graph-income.jpg" alt="Graph 1: Per Capita Income and Vaccination Coverage" />
+                </figure>
+            </li>
+            <li><strong>Political Alignment</strong>
+                <p>All OLS models, along with most of the FE models, show positive and substantial coefficients for a state's Democratic alignment. The predicted increase in state vaccination coverage by 1% should be between 0.6% and 2.4% on average, depending on how strongly the Democratic Party is represented in the state's population. Similarly, when model 7 and model 9 are compared, the Republican alignment coefficient is shown to be substantial, negative, and numerically close to the Democratic alignment coefficient. According to model 9, a 1% rise in the number of strongly Republican state residents should cause the state's vaccination coverage to drop by an average of 0.56%.</p>
+
+                <figure>
+                    <figcaption>Graph 2: Democratic Voters and Vaccination Coverage</figcaption>
+                    <img src="images/scatter-graph-democrat.png" alt="Graph 2: Democratic Voters and Vaccination Coverage" />
+                </figure>
+                <figure>
+                    <figcaption>Graph 3: Republican Voters and Vaccination Coverage</figcaption>
+                    <img src="images/scatter-graph-republican.png" alt="Graph 3: Republican Voters and Vaccination Coverage" />
+                </figure>
+            </li>
+            <li><strong>Black Population</strong>
+                <p>In all OLS models, the coefficient on the Black population is negative and substantial. Therefore, a 1% increase in a state's share of black people should result in a projected fall in the state's vaccination coverage of between 0.24% and 0.37%. In FE models, it is less significant and occasionally even positive, indicating that the state level fixed effects are mostly responsible for the fluctuation.</p>
+
+                <figure>
+                    <figcaption>Graph 4: Black Population Density  and Vaccination Coverage</figcaption>
+                    <img src="images/scatter-graph-black.png" alt="Graph 4: Black Population Density  and Vaccination Coverage" />
+                </figure>
+            </li>
+            <li><strong>Young Population</strong>
+                <p>In its OLS models, the age coefficient for the larger 0 to 34 age range is substantial and negative. In contrast, the coefficient for the narrower age variable of 19 to 34 is also negative and significant within its OLS models, meaning that an expected decrease in state vaccination coverage of between 1.25% and 1.71% should result from a 1% increase in the proportion of the population in a state aged between 19 and 34. Although both variables' coefficients are still negative in all except 2 and 8 FE models, they are not significant.</p>
+
+                <figure>
+                    <figcaption>Graph 5: Young Population (0-34) and Vaccination Coverage</figcaption>
+                    <img src="images/scatter-graph-young.png" alt="Graph 5: Young Population (0-34) and Vaccination Coverage" />
+                </figure>
+            </li>
+            <li><strong>Education Level</strong>
+                <p>Finally, a 1% rise in the percentage of a state's population with a bachelor's degree or more should result in an average increase in state vaccination coverage of between 0.67% and 0.79%, according to OLS models and FE model 8 where the coefficient on education is positive and substantial. Most of these state-level findings concur with individual-level findings from the highlighted logistic models in Section 2.</p>
+
+                <figure>
+                    <figcaption>Graph 6: Education Level  and Vaccination Coverage</figcaption>
+                    <img src="images/scatter-graph-education.png" alt="Graph 6: Education Level  and Vaccination Coverage" />
+                </figure>
+            </li>
+        </ol>
     </li>
     <li>
         <h2>Policy Guidance (based on the OLS results)</h2>
