--- a/project.html
+++ b/project.html
@@ -506,7 +506,7 @@
                     <figcaption>
                         Graph 1: Per Capita Income and Vaccination Coverage
                     </figcaption>
-                    <img src="images/scatter-graph-income.jpg" alt="Graph 1: Per Capita Income and Vaccination Coverage" />
+                    <img src="images/scatter-graph-income.png" alt="Graph 1: Per Capita Income and Vaccination Coverage" />
                 </figure>
             </li>
             <li><strong>Political Alignment</strong>
